# example-rnaseq

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  RUNNING_WORKFLOWS.md  immune_scrnaseq_monolithic.py  pyproject.toml
checkpointed_workflow/: run_workflow.py
modular_workflow/: run_workflow.py
prefect_workflow/: README.md
snakemake_workflow/: Makefile  Makefile_copy_to_datadir  Snakefile
snakemake_workflow/.snakemake/iocache/: latest.pkl
snakemake_workflow/config/: config.yaml
snakemake_workflow/report/: workflow.rst
snakemake_workflow/rules/: common.smk  per_cell_type.smk  preprocessing.smk  pseudobulk.smk
snakemake_workflow/scripts/: aggregate_results.py  cluster.py  differential_expression.py  dimred.py  download.py  enrichr.py  filter.py  gsea.py  prediction.py  preprocess.py  pseudobulk.py  qc.py
src/example_rnaseq/: checkpoint.py  differential_expression.py  dimensionality_reduction.py  overrepresentation_analysis.py  preprocessing.py  pseudobulk.py  quality_control.py
stateless_workflow/: run_workflow.py
tests/: conftest.py  create_test_data.py  hypothesis_based_testing_scratchpad.md  problems_to_fix.md  test_checkpoint.py  test_clustering.py  test_data_filtering.py  test_data_loading.py  test_differential_expression.py  test_dimensionality_reduction.py  test_execution_log.py  test_hypothesis.py  test_integration.py  test_overrepresentation_analysis.py  test_pathway_analysis.py  test_predictive_modeling.py  test_preprocessing.py  test_pseudobulk.py  test_quality_control.py  test_snakemake_workflow.py
