[project]
name = "example-rnaseq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.12.7",
    "dask>=2025.12.0",
    "gseapy>=1.1.11",
    "h5py>=3.15.1",
    "pydeseq2>=0.5.3",
    "scanpy>=1.11.5",
    "snakemake>=9.14.5",
    "xarray>=2025.12.0",
]
