[project]
name = "example_rnaseq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.12.7",
    "dask>=2025.12.0",
    "fastparquet>=2025.12.0",
    "gseapy>=1.1.11",
    "h5py>=3.15.1",
    "harmony-pytorch>=0.1.8",
    "harmonypy>=0.0.10",
    "igraph>=1.0.0",
    "ipython>=9.8.0",
    "pyarrow>=22.0.0",
    "pydeseq2>=0.5.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "scanpy>=1.11.5",
    "scikit-image>=0.26.0",
    "scikit-misc>=0.5.2",
    "snakemake>=9.14.5",
    "xarray>=2025.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::FutureWarning",
    "ignore::DeprecationWarning",
]

